--- a/package.json
+++ b/package.json
@@ -1,39 +1,54 @@
 {
-  "name": "dstorage",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "geist": "^1.3.0",
-    "next": "^14.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zod": "^3.23.3"
-  },
-  "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.33.1"
-  },
-  "packageManager": "pnpm@9.1.0"
+   "name": "dstorage",
+   "version": "0.1.0",
+   "private": true,
+   "type": "module",
+   "scripts": {
+      "build": "next build",
+      "dev": "next dev",
+      "lint": "next lint",
+      "start": "next start",
+      "prepare": "husky"
+   },
+   "dependencies": {
+      "@t3-oss/env-nextjs": "^0.10.1",
+      "geist": "^1.3.0",
+      "next": "^14.2.1",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "zod": "^3.23.3"
+   },
+   "lint-staged": {
+      "*.{js,jsx,ts,tsx}": [
+         "eslint --fix --ext .ts,.tsx,.js,.jsx"
+      ],
+      "*{js,jsx,ts,tsx,json,cjs,mjs,md}": [
+         "prettier --write"
+      ]
+   },
+   "devDependencies": {
+      "@commitlint/cli": "^19.3.0",
+      "@commitlint/config-conventional": "^19.2.2",
+      "@types/eslint": "^8.56.2",
+      "@types/node": "^20.11.20",
+      "@types/react": "^18.2.57",
+      "@types/react-dom": "^18.2.19",
+      "@typescript-eslint/eslint-plugin": "^7.1.1",
+      "@typescript-eslint/parser": "^7.1.1",
+      "eslint": "^8.57.0",
+      "eslint-config-next": "^14.1.3",
+      "eslint-plugin-react": "^7.34.1",
+      "eslint-plugin-tailwindcss": "^3.15.2",
+      "husky": "^9.0.11",
+      "lint-staged": "^15.2.2",
+      "postcss": "^8.4.34",
+      "prettier": "^3.2.5",
+      "prettier-plugin-tailwindcss": "^0.5.11",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5.4.2"
+   },
+   "ct3aMetadata": {
+      "initVersion": "7.33.1"
+   },
+   "packageManager": "pnpm@9.1.0"
 }
