--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    },
    "dependencies": {
       "@t3-oss/env-nextjs": "^0.10.1",
+      "convex": "^1.12.0",
       "geist": "^1.3.0",
       "next": "^14.2.1",
       "react": "18.2.0",
