--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
    "dependencies": {
       "@clerk/clerk-sdk-node": "^5.0.7",
       "@clerk/nextjs": "^5.0.12",
+      "@hookform/resolvers": "^3.4.2",
+      "@radix-ui/react-dialog": "^1.0.5",
+      "@radix-ui/react-label": "^2.0.2",
       "@radix-ui/react-slot": "^1.0.2",
       "@t3-oss/env-nextjs": "^0.10.1",
       "class-variance-authority": "^0.7.0",
@@ -24,10 +27,11 @@
       "next": "^14.2.1",
       "react": "18.2.0",
       "react-dom": "18.2.0",
+      "react-hook-form": "^7.51.5",
       "svix": "^1.24.0",
       "tailwind-merge": "^2.3.0",
       "tailwindcss-animate": "^1.0.7",
-      "zod": "^3.23.3"
+      "zod": "^3.23.8"
    },
    "lint-staged": {
       "*.{js,jsx,ts,tsx}": [
